<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_adicionar_eleitor"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:text="@string/adicionar_eleitor"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_adicionar_candidato"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:text="@string/adicionar_candidato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_adicionar_eleitor" />

    <Button
        android:id="@+id/button_listar_eleitor"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/lista_de_eleitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_adicionar_eleitor" />

    <Button
        android:id="@+id/button_listar_candidato"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/lista_de_candidatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toEndOf="@+id/button_listar_eleitor"
        app:layout_constraintTop_toBottomOf="@+id/button_adicionar_candidato" />

    <Button
        android:id="@+id/button_gravar_voto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/gravar_voto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_listar_eleitor" />

    <Button
        android:id="@+id/button_ver_resultado"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toEndOf="@+id/button_gravar_voto"
        app:layout_constraintTop_toBottomOf="@+id/button_listar_candidato" />
</androidx.constraintlayout.widget.ConstraintLayout>